# poetry_slug

./: README.md  pyproject.toml
poetry_slug/: __init__.py  application.py
tests/: test_poetry_slug.py
