[tool.poetry]
name = "poetry_slug"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
poetry_slug = 'poetry_slug:application.Application'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

